// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag base demo works fine 1`] = `
<div
  class="tag-demo"
>
  <div
    class="tdesign-demo-block"
  >
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark"
    >
      <i
        class="t-icon t-icon-"
      />
      默认
    </span>
     
    <a
      class="demo-link"
    >
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
      >
        <i
          class="t-icon t-icon-"
        />
        超链接
      </span>
    </a>
  </div>
</div>
`;

exports[`Tag delete demo works fine 1`] = `
<div
  class="tag-demo"
>
  <div
    class="tdesign-demo-block"
  >
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark"
    >
      <i
        class="t-icon t-icon-"
      />
      
      隐藏叉
    
    </span>
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
    >
      <i
        class="t-icon t-icon-"
      />
      
      显示叉
    
      <i
        class="t-icon t-icon-close"
      />
    </span>
    <span
      class="t-tag t-tag--info t-size-m t-tag--dark t-tag--close"
    >
      <i
        class="t-icon t-icon-discount"
      />
      
      可删除
    
      <i
        class="t-icon t-icon-close"
      />
    </span>
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark t-tag--ellipsis"
      style="max-width: 150px;"
    >
      <i
        class="t-icon t-icon-"
      />
      
      默认超过八个字超出部分隐藏
    
    </span>
    <span
      class="t-tag t-tag--info t-size-m t-tag--dark"
    >
      <i
        class="t-icon t-icon-add"
      />
      
      添加标签
    
    </span>
  </div>
</div>
`;

exports[`Tag disabled demo works fine 1`] = `
<div
  class="tdesign-tag-disabled"
>
  <span
    class="check-tag t-tag t-tag--check t-tag--default t-tag--disabled"
  >
    失效标签
  </span>
</div>
`;

exports[`Tag icon demo works fine 1`] = `
<div
  class="tdesign-tag-icon"
>
  <div
    class="tdesign-demo-block"
  >
    
    自定义图标标签：
    
    <span
      class="custom-icon t-tag t-tag--default t-size-m t-tag--dark"
    >
      <i
        class="t-icon"
      >
        <span>
          ×
        </span>
      </i>
      标签
    </span>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    
    图标标签：
    
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark"
    >
      <i
        class="t-icon t-icon-search"
      />
      标签
    </span>
  </div>
</div>
`;

exports[`Tag long-text demo works fine 1`] = `
<div
  class="tdesign-tag-ellipsis"
>
  <span
    class="t-tag t-tag--default t-size-m t-tag--dark t-tag--ellipsis"
    style="max-width: 150px;"
    title="超长省略文本标签超长省略文本标签"
  >
    <i
      class="t-icon t-icon-"
    />
    超长省略文本标签超长省略文本标签
  </span>
</div>
`;

exports[`Tag plain demo works fine 1`] = `
<div
  class="tdesign-tag-plain"
>
  <span
    class="t-tag t-tag--primary t-size-m t-tag--plain"
  >
    <i
      class="t-icon t-icon-"
    />
    标签一
  </span>
   
  <span
    class="t-tag t-tag--success t-size-m t-tag--plain"
  >
    <i
      class="t-icon t-icon-"
    />
    标签二
  </span>
   
  <span
    class="t-tag t-tag--info t-size-m t-tag--plain"
  >
    <i
      class="t-icon t-icon-"
    />
    标签三
  </span>
   
  <span
    class="t-tag t-tag--warning t-size-m t-tag--plain"
  >
    <i
      class="t-icon t-icon-"
    />
    标签四
  </span>
   
  <span
    class="t-tag t-tag--danger t-size-m t-tag--plain"
  >
    <i
      class="t-icon t-icon-"
    />
    标签五
  </span>
</div>
`;

exports[`Tag selectable demo works fine 1`] = `
<div
  class="tag-demo"
>
  <div
    class="tdesign-demo-block"
  >
    <span
      class="t-tag t-tag--check t-tag--default t-tag--checked"
    >
      
      选中1
    
    </span>
    <span
      class="t-tag t-tag--check t-tag--default t-tag--checked"
    >
      
      选中2
    
    </span>
    <span
      class="t-tag t-tag--check t-tag--default"
    >
      
      未选3
    
    </span>
    <span
      class="t-tag t-tag--check t-tag--default"
    >
      
      未选4
    
    </span>
  </div>
</div>
`;

exports[`Tag shape demo works fine 1`] = `
<div
  class="tag-demo"
>
  <div
    class="tdesign-demo-block"
  >
    
    正常：
    
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark"
    >
      <i
        class="t-icon t-icon-"
      />
      标签一
    </span>
     
    <span
      class="t-tag t-tag--primary t-size-m t-tag--dark"
    >
      <i
        class="t-icon t-icon-"
      />
      标签一
    </span>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    
    圆角：
    
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark t-tag--round"
    >
      <i
        class="t-icon t-icon-"
      />
      标签一
    </span>
     
    <span
      class="t-tag t-tag--primary t-size-m t-tag--dark t-tag--round"
    >
      <i
        class="t-icon t-icon-"
      />
      标签一
    </span>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    
    标记：
    
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark t-tag--mark"
    >
      <i
        class="t-icon t-icon-"
      />
      标签一
    </span>
     
    <span
      class="t-tag t-tag--primary t-size-m t-tag--dark t-tag--mark"
    >
      <i
        class="t-icon t-icon-"
      />
      标签一
    </span>
  </div>
</div>
`;

exports[`Tag size demo works fine 1`] = `
<div
  class="tag-demo"
>
  <div
    class="tdesign-demo-block"
  >
    <span
      class="t-tag t-tag--default t-size-s t-tag--dark"
    >
      <i
        class="t-icon t-icon-"
      />
      标签 小
    </span>
     
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark"
    >
      <i
        class="t-icon t-icon-"
      />
      标签 中
    </span>
     
    <span
      class="t-tag t-tag--default t-size-l t-tag--dark"
    >
      <i
        class="t-icon t-icon-"
      />
      标签 大
    </span>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    <span
      class="t-tag t-tag--primary t-size-s t-tag--dark"
    >
      <i
        class="t-icon t-icon-"
      />
      标签 小
    </span>
     
    <span
      class="t-tag t-tag--primary t-size-m t-tag--dark"
    >
      <i
        class="t-icon t-icon-"
      />
      标签 中
    </span>
     
    <span
      class="t-tag t-tag--primary t-size-l t-tag--dark"
    >
      <i
        class="t-icon t-icon-"
      />
      标签 大
    </span>
  </div>
</div>
`;

exports[`Tag theme demo works fine 1`] = `
<div
  class="tdesign-tag-theme"
>
  <div
    class="tdesign-demo-block"
  >
    
    深色
    
    <span
      class="t-tag t-tag--primary t-size-m t-tag--dark"
    >
      <i
        class="t-icon t-icon-"
      />
      标签一
    </span>
     
    <span
      class="t-tag t-tag--success t-size-m t-tag--dark"
    >
      <i
        class="t-icon t-icon-"
      />
      标签二
    </span>
     
    <span
      class="t-tag t-tag--info t-size-m t-tag--dark"
    >
      <i
        class="t-icon t-icon-"
      />
      标签三
    </span>
     
    <span
      class="t-tag t-tag--warning t-size-m t-tag--dark"
    >
      <i
        class="t-icon t-icon-"
      />
      标签四
    </span>
     
    <span
      class="t-tag t-tag--danger t-size-m t-tag--dark"
    >
      <i
        class="t-icon t-icon-"
      />
      标签五
    </span>
  </div>
   
  <div
    class="tdesign-demo-block light"
  >
    
    浅色
    
    <span
      class="t-tag t-tag--primary t-size-m t-tag--light"
    >
      <i
        class="t-icon t-icon-"
      />
      标签一
    </span>
     
    <span
      class="t-tag t-tag--success t-size-m t-tag--light"
    >
      <i
        class="t-icon t-icon-"
      />
      标签二
    </span>
     
    <span
      class="t-tag t-tag--info t-size-m t-tag--light"
    >
      <i
        class="t-icon t-icon-"
      />
      标签三
    </span>
     
    <span
      class="t-tag t-tag--warning t-size-m t-tag--light"
    >
      <i
        class="t-icon t-icon-"
      />
      标签四
    </span>
     
    <span
      class="t-tag t-tag--danger t-size-m t-tag--light"
    >
      <i
        class="t-icon t-icon-"
      />
      标签五
    </span>
  </div>
   
  <div
    class="tdesign-demo-block plain"
  >
    
    朴素
    
    <span
      class="t-tag t-tag--primary t-size-m t-tag--plain"
    >
      <i
        class="t-icon t-icon-"
      />
      标签一
    </span>
     
    <span
      class="t-tag t-tag--success t-size-m t-tag--plain"
    >
      <i
        class="t-icon t-icon-"
      />
      标签二
    </span>
     
    <span
      class="t-tag t-tag--info t-size-m t-tag--plain"
    >
      <i
        class="t-icon t-icon-"
      />
      标签三
    </span>
     
    <span
      class="t-tag t-tag--warning t-size-m t-tag--plain"
    >
      <i
        class="t-icon t-icon-"
      />
      标签四
    </span>
     
    <span
      class="t-tag t-tag--danger t-size-m t-tag--plain"
    >
      <i
        class="t-icon t-icon-"
      />
      标签五
    </span>
  </div>
</div>
`;
